# flash-attn-triton

./: .gitignore  LICENSE  pyproject.toml
src/flash_attn_triton/: __init__.py  ops.py  triton_kernels.py
tests/: test_flash_attn.py  test_smoke.py
